--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta property="og:title" content="Japanese Conjugation Practice">
         <meta property="og:description" content="Learn how to conjugate Japanese verbs and adjectives!">
         <meta property="og:type" content="website" />
-        <meta property="og:image" content="./^streamlined_screenshot.png">
+        <meta property="og:image" content="./streamlined_screenshot.png">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
         <link rel="stylesheet" href="style.css">
         <link rel="icon" href="./favicon.ico">
